fixed desc-cont of answers to staff questions on popup to have max-height and overflow y for answers that overflow on container; make sure to remove on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -365,7 +365,8 @@ header{
 			}
 
 			.desc-cont {
-				//overflow-y: auto;
+				max-height: 75vh;
+				overflow-y: auto;
 			}
 
 			.person-descr {
